[package]
name = "autocfg"
version = "0.1.8"
authors = ["Josh Stone <cuviper@gmail.com>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/cuviper/autocfg"
description = "Automatic cfg for Rust compiler features"
readme = "README.md"
keywords = ["rustc", "build", "autoconf"]
categories = ["development-tools::build-utils"]

[dependencies]
autocfg = "1.1.0"

[lib]
name = "autocfg"
doctest = false
test = false
